--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     font-family: 'Comfortaa';
 }
 
+html{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 h1, h2, h3, h4, h5, h4, p, a, input, textarea, ul{
     margin: 0;
     padding: 0;
@@ -48,8 +54,8 @@ h1, h2, h3, h4, h5, h4, p, a, input, textarea, ul{
 
 #icon img{
     margin-top: 8px;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     transition: .5s;
     cursor: pointer;
     border-radius: 15px;
@@ -193,7 +199,6 @@ h1, h2, h3, h4, h5, h4, p, a, input, textarea, ul{
 .Contenedor-prin-prod{
     background-color: white;
     background-image: url(imgs/fondo-abstracto-blanco_23-2148818118.avif);
-    /* background-image: url(imgs/zanahoria.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -623,4 +628,110 @@ h1, h2, h3, h4, h5, h4, p, a, input, textarea, ul{
 
 .saved{
     transition: .5s;
+}
+
+
+/* MEDIAS QUERIES */
+
+@media screen and (max-width: 900px){
+
+    body{
+        background-color: #6B0F1A;
+    }
+
+    .wrapper{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .menu-productos{
+        margin: 0;
+        padding: 0 5px;
+    }
+
+    .contenedor-principal{
+        margin-top: 20px;
+    }
+
+    .contenedor-principal .contenedor-productos{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .Productos{
+        height: 70%;
+    }
+
+    .Descricion-producto{
+        font-size: 10px;
+    }
+
+    .Productos img{
+        position: inherit;
+        height: 100px;
+    }
+
+    .titulo-main{
+        display: none;
+    }
+
+    .wrapper-header a{
+        display: none;
+    }
+
+    .wrapper-header{
+        background-color: #6B0F1A;
+        margin-top: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-right: 10px;
+        padding: 10px 10px;
+    }
+
+    .wrapper-header .elem2{
+        font-size: 20px;
+    }
+
+    .wrapper .wrapper-index{
+        display: flex;
+        position: absolute;
+        z-index: 99;
+        left: 300px;
+    }
+    .wrapper-footer{
+        display: none;
+    }
+
+    .wrapper aside {
+        display: inline-block;
+        padding: 0 5px;
+        height: 50px;
+    }
+
+    .list-index{
+        display: inline-block;
+        background-color: #502F4C;
+        border-radius: 5px;
+        border: none;
+        padding: 0;
+    }
+
+    .list-index .item{
+        padding-bottom: .5rem;
+    }
+
+    .boton-index{
+        font-size: 14px;
+    }
+
+    .active{
+        background-color: transparent;
+        color: white;
+        box-shadow: none;
+    }.active:hover{
+        transform: none;
+        transition: .5s;
+    }
+    
 }
